--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
